# opentelemetry-instrumentation-rdkafka

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
examples/: simple.rs
src/: consumer.rs  lib.rs  producer.rs  propagation.rs  semantic.rs
