[package]
name = "opentelemetry-instrumentation-rdkafka"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "OpenTelemetry instrumentation for rust-rdkafka"
license = "Apache-2.0"

[dependencies]
opentelemetry = "0.31"
rdkafka = { version = "0.39", features = ["cmake-build"] }

[dev-dependencies]
opentelemetry_sdk = { version = "0.31", features = ["testing"] }
opentelemetry-stdout = "0.31"
tokio = { version = "1", features = ["full"] }
